<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical"
        android:padding="20dp">
    <Button
        android:id="@+id/logoutButton"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/button_height_small"
        android:background="@drawable/button_black_selector"
        android:onClick="onLogOut"
        android:text="@string/profile_log_out"
        android:layout_gravity="end"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_small" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@drawable/button_general_selector"
        android:clickable="true"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="horizontal">

        <com.mine.flippant.ui.views.RoundedImageView
            style="@style/AvatarImageView_sign"
            android:id="@+id/avatar_imageview"
            android:layout_gravity="center"
            android:onClick="changeAvatarOnClickListener"
            app:border_color="@color/white"
            app:border_width="@dimen/avatar_border_width"
            app:oval="true"/>
    </LinearLayout>

    <EditText
        android:id="@+id/login_edittext"
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/sup_username_hint"
        android:inputType="textPersonName"
        />

    <EditText
        android:id="@+id/profile_email_edittext"
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:hint="@string/sup_email_hint"
        android:inputType="textEmailAddress"
        android:maxLength="128" />

    <EditText
        android:id="@+id/current_password_edittext"
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:hint="@string/lgn_current_password_hint"
        android:inputType="textPassword"/>

    <EditText
        android:id="@+id/new_password_edittext"
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:hint="@string/lgn_new_password_hint"
        android:inputType="textPassword"/>

    <EditText
        android:id="@+id/confirm_new_password_edittext"
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:hint="@string/lgn_confirm_new_password_hint"
        android:inputType="textPassword"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_gravity="center_horizontal" />

    <Button
        android:id="@+id/confirm_button"
        android:layout_width="240dp"
        android:layout_height="@dimen/button_height_large"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="20sp"
        android:layout_marginRight="20dp"
        android:background="@drawable/button_black_selector"
        android:onClick="onProfileConfirm"
        android:text="@string/profile_confirm"
        android:textColor="@color/white"
        android:textSize="@dimen/button_text_size" />


    <ImageButton
        android:id="@+id/back_previous_imagebutton"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:padding="3dp"
        android:layout_gravity="end"
        android:foregroundGravity="bottom"
        android:layout_margin="10dp"
        android:scaleType="centerCrop"
        android:background="@drawable/button_general_selector"
        android:onClick="backToMain"
        android:src="@drawable/navigation_back_rect"
        android:contentDescription="@string/profile_back"/>
    </LinearLayout>
 </ScrollView>