<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:baselineAligned="true"
    android:gravity="center"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="20dp">
    <Space
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal" />

    <EditText
        android:id="@+id/username_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/sup_username_hint"
        android:textAlignment="center"
        android:inputType="textEmailAddress"
        android:maxLength="128" />
    <EditText
        android:id="@+id/email_edit"
	    android:layout_marginTop="30dp"
	    android:layout_width="match_parent"
        android:textAlignment="center"
        android:layout_height="wrap_content"
        android:hint="@string/sup_email_hint"
        android:inputType="textEmailAddress"
        android:maxLength="128" />

    <EditText
        android:id="@+id/password_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_marginTop="30dp"
        android:hint="@string/lgn_password_hint"
        android:inputType="textPassword"
        android:maxLength="256" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="240dp"
        android:layout_height="@dimen/button_height_large"
        android:layout_marginTop="35dp"
        android:background="@drawable/button_black_selector"
        android:onClick="loginOnClickListener"
        android:text="@string/sup_sign_up"
        android:textColor="@android:color/white"
        android:textSize="@dimen/button_text_size" />

    <TextView
        android:id="@+id/no_account_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="25dp"
        android:background="@drawable/button_general_selector"
        android:clickable="true"
        android:onClick="GoSignUpOnClickListener"
        android:padding="5dp"
        android:text="@string/lgn_have_not_account"
        android:textColor="@color/black"
        android:textSize="22sp" />

    <RelativeLayout
        android:id="@+id/progress_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <ProgressBar
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/progressBar"
        android:visibility="gone"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />
    </RelativeLayout>


</LinearLayout>
</ScrollView>