<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical"
        android:padding="20dp">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@drawable/button_general_selector"
        android:clickable="true"
        android:orientation="horizontal">

        <com.mine.flippant.ui.views.RoundedImageView
            style="@style/AvatarImageView_sign"
            android:id="@+id/avatar_imageview"
            android:layout_centerInParent="true"
            android:onClick="changeAvatarOnClickListener"
            app:border_color="@color/white"
            app:border_width="@dimen/avatar_border_width"
            app:oval="true" />

    </RelativeLayout>

    <EditText
        android:id="@+id/fullname_edittext"
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/sup_username_hint"
        android:inputType="textPersonName"/>

    <EditText
        android:id="@+id/email_edittext"
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/sup_email_hint"
        android:inputType="textEmailAddress"
        android:maxLength="128" />

    <EditText
        android:id="@+id/password_edittext"
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/lgn_password_hint"
        android:inputType="textPassword"/>
    <EditText
        android:id="@+id/confirm_password_edittext"
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/lgn_confirm_password_hint"
        android:inputType="textPassword"/>

    <Button
        android:id="@+id/signUpButton"
        android:layout_width="240dp"
        android:layout_height="@dimen/button_height_large"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/button_black_selector"
        android:onClick="signUpOnClickListener"
        android:layout_marginTop="20dp"
        android:text="@string/sup_sign_up"
        android:textColor="@color/white"
        android:textSize="@dimen/button_text_size" />
    <TextView
        android:id="@+id/btn_have_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_general_selector"
        android:onClick="GoLoginClickListener"
        android:gravity="center"
        android:clickable="true"
        android:text="@string/lnd_have_account"
        android:textColor="@color/black"
        android:textSize="22sp" />
    <RelativeLayout
        android:id="@+id/progress_signin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ProgressBar
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/progressBar_singin"
            android:visibility="gone"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true" />

    </RelativeLayout>

    </LinearLayout>


</ScrollView>