<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_gravity="center"
        android:layout_weight="3"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="10dp">

        <TextView
            android:id="@+id/questionCardText"
            android:layout_width="120dp"
            android:padding="5dp"
            android:layout_height="match_parent"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:hint="@string/question_card_hint"
            android:background="@drawable/back"
            android:textSize="14sp"
            android:text=""
            android:layout_margin="5dp"/>

        <TextView
            android:id="@+id/voteAreaText"
            android:layout_width="120dp"
            android:padding="5dp"
            android:background="@drawable/back"
            android:layout_height="match_parent"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:hint="@string/answer_drag_hint"
            android:textSize="14sp"
            android:text=""
            android:layout_margin="5dp"/>
    </LinearLayout>

    <Space
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp" />
    <HorizontalScrollView
        android:id="@+id/scrollView"
        android:layout_weight="3"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:scrollbarAlwaysDrawHorizontalTrack="false">
        <LinearLayout
            android:id="@+id/src_in"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/answer1_textview"
                android:background="@drawable/back"
                android:padding="5dp"
                android:maxLines="2"
                android:ellipsize="end"
                android:gravity="fill_horizontal"
                android:textSize="22sp"
                android:layout_marginLeft="@dimen/between_card_width"
                android:layout_width="150dp"
                android:layout_height="match_parent"
                android:hint="@string/no_answer"/>
            <TextView
                android:id="@+id/answer2_textview"
                android:background="@drawable/back"
                android:padding="5dp"
                android:maxLines="2"
                android:ellipsize="end"
                android:gravity="fill_horizontal"
                android:textSize="22sp"
                android:layout_marginLeft="@dimen/between_card_width"
                android:layout_width="150dp"
                android:layout_height="match_parent"
                android:hint="@string/no_answer"/>
            <TextView
                android:id="@+id/answer3_textview"
                android:background="@drawable/back"
                android:padding="5dp"
                android:maxLines="2"
                android:ellipsize="end"
                android:gravity="fill_horizontal"
                android:textSize="22sp"
                android:layout_marginLeft="@dimen/between_card_width"
                android:layout_width="150dp"
                android:layout_height="match_parent"
                android:hint="@string/no_answer"/>
            <TextView
                android:id="@+id/answer4_textview"
                android:background="@drawable/back"
                android:padding="5dp"
                android:maxLines="2"
                android:ellipsize="end"
                android:gravity="fill_horizontal"
                android:textSize="22sp"
                android:layout_marginLeft="@dimen/between_card_width"
                android:layout_marginRight="@dimen/between_card_width"
                android:layout_width="150dp"
                android:layout_height="match_parent"
                android:hint="@string/no_answer"/>

        </LinearLayout>
    </HorizontalScrollView>
</LinearLayout>